# openworld

./: .gitignore  README.md
backend/: .env.example  Cargo.toml  Makefile  memory.json
backend/examples/: trip.md
backend/scripts/: openworld.sh
backend/src/: api.rs  erc7857.rs  lib.rs  og_compute.rs  og_storage.rs  orchestrator.rs  report.rs  travel_spec.rs
backend/src/agents/: artifact.rs  mod.rs  planner.rs  recovery.rs  reservation.rs  search.rs  vault.rs
contract/broadcast/DeployOpenWorldJourney.s.sol/16602/: run-1778929865276.json  run-1778940853726.json  run-latest.json
contract/broadcast/DeployOpenWorldJourney.s.sol/16661/: run-1778946231744.json  run-1778946324352.json
contract/script/: DeployOpenWorldJourney.s.sol
contract/src/: OpenWorldJourney.sol
frontend/: index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.node.json
frontend/src/: App.tsx  index.css
frontend/src/components/: ActivityFeed.tsx  ArtifactGallery.tsx  ExecutionMetrics.tsx  Footer.tsx  HeroSection.tsx  LiveSystemStatus.tsx  Navbar.tsx  RootHashExplorer.tsx  TripEditor.tsx  TxFeed.tsx
frontend/src/hooks/: useChainData.ts
frontend/src/lib/: mockData.ts
